# MemeLife

./: CMakeLists.txt  Makefile  QUICK_REFERENCE.md
Instructions/: Phase1.md  Phase3.md  Phase4.md
Legacy Version/: .gitignore  CMakeLists.txt  PHASE2.5_INDEX.md  PHASE2.5_QUICK_SUMMARY.md  PHASE2_TEST_GUIDE.md  README.md  build_and_run.bat
Legacy Version/Instructions/: Master.md  Phase2.md
Legacy Version/assets/events/: 01_start.txt
Legacy Version/docs/: CLEAN_STRUCTURE.md  GAME_ENGINE_GUIDE.md  PHASE2.5_DETAILED_PLAN.md  PHASE2.5_ROADMAP.md  PHASE2_BUILD_SUMMARY.md  PHASE2_FULL_REVIEW.md  PROJECT_OVERVIEW.md  verify-phase1.ps1
Legacy Version/include/: AssetLoader.h  Map.h  Quiz.h  Save.h  Terminal.h
Legacy Version/src/: Map.cpp  Quiz.cpp  Terminal.cpp
SDL2 Version/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  PHASE2_COMPLETE.md  README.md  SCRIPTS_UPDATE.md  TEAM_SETUP.md  build.bat  generate_assets.py  generate_audio.py  setup.bat  setup.ps1  verify.bat
SDL2 Version/assets/events/: EV_BUY_COFFEE.txt  EV_GET_MONEY.txt  EV_TOUCH_LIVE_WIRE.txt
SDL2 Version/docs/: Master.md  meh.md  plan.md
SDL2 Version/docs/Act 1/: Phase1.md  Phase2.md  Phase3.md  Phase4.md
SDL2 Version/docs/Act 2/: Phase5.md  Phase6.md  Phase7.md  Phase8.md
SDL2 Version/docs/Progress_Summary/: PHASE1_COMPLETE.md  STATUS_REPORT.txt
SDL2 Version/src/: AudioManager.cpp  AudioManager.h  Buff.cpp  Buff.h  CharacterCreationScene.cpp  CharacterCreationScene.h  DialogueBox.cpp  DialogueBox.h  EventManager.cpp  EventManager.h  Font.cpp  Font.h  GameManager.cpp  GameManager.h  HUDManager.cpp  HUDManager.h  Map.cpp  Map.h  Player.cpp  Player.h  TimeManager.cpp  TimeManager.h  UIManager.cpp  UIManager.h  main.cpp
docs/: PHASE1_COMPLETE.md  PHASE2_COMPLETED.md  PROJECT_OVERVIEW.md
include/: Battle.h  GameData.h  Renderer.h
src/: AssetLoader.cpp  Battle.cpp  Renderer.cpp  Save.cpp  main.cpp
